# unified-book-rag

./: .gitignore  CLAUDE.md  TRANSLATION_BUILD_SYSTEM.md  docusaurus.config.ts  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_openai_embedding.py  tsconfig.json
.claude/: settings.local.json
.claude/agents/: auth-engineer.md  book-architect.md  content-researcher.md  rag-engineer.md  ui-designer.md
.claude/skills/: better-auth-schema.md  correct-rag-implementation.md  docusaurus-styling.md  rag-architecture.md  react-chat-logic.md  research-to-content.md
.specify/memory/: constitution.md
app/: agent.py  main.py  qdrant_utils.py
app/models/: chat_models.py
app/services/: ingestion.py
book_source/: GEMINI.md  docusaurus.config.ts  package-lock.json
book_source/docs/: 01-hardware-lab.md  01-physical-ai-intro.md  02-ros2-basics.md  03-isaac-sim.md  04-genai-robotics.md  05-humanoid-walking.md
book_source/static/: urduTranslations.json
docs/Module 01 Hardware-Lab/: 1.3-physical-ai-edge-kit.md
docs/Module 02 ROS2-Basics/: 2.2-python-publisher-subscriber.md  2.3-launch-files-orchestration.md
docs/Module 03 saac-Sim/: 3.2-importing-robot-models.md  3.3-sim-to-real-transfer-techniques.md
docs/Module 05 Humanoid-Walking/: 5.2-humanoid-physics-and-zmp.md  5.3-humanoid-static-dynamic-walking.md
docs/Module 06 Navigation-SLAM/: 6.1-slam-fundamentals.md  6.2-navigation-obstacle-avoidance-realsense.md  (+1 more)
node_server/: auth.js  db.js  index.js  package-lock.json  package.json
references/: course-syllabus.md
(+130 files in other folders)
