[project]
name = "unified-book-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "jinja2>=3.1.6",
    "openai-agents>=0.6.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
