[project]
name = "unified-book-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "openai>=2.8.1",
    "openai-agents>=0.6.1",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.1",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "jinja2>=3.1.6",
    "openai-agents>=0.6.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
